--- a/dashboard/home/templates/static/assets/demo/docs.css
+++ b/dashboard/home/templates/static/assets/demo/docs.css
@@ -1,125 +1,4 @@
 /*!
  * Bootstrap Docs (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
- * Licensed under the Creative Commons Attribution 3.0 Unported License. For
- * details, see https://creativecommons.org/licenses/by/3.0/.
- */
-
-/* General styles */
-.bd-navbar {
-  min-height: 4rem;
-  background-color: #3F51B5;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
-  border-radius: 0;
-}
-
-/* Navbar styles for smaller screens */
-@media (max-width: 991px) {
-  .bd-navbar {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-
-  .bd-navbar .navbar-nav-scroll {
-    max-width: 100%;
-    height: 2.5rem;
-    margin-top: 0.25rem;
-    overflow: hidden;
-    font-size: 0.875rem;
-  }
-
-  .bd-navbar .navbar-nav-scroll .navbar-nav {
-    padding-bottom: 2rem;
-    overflow-x: auto;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-  }
-}
-
-/* Navbar styles for screens with min-width: 768px */
-@media (min-width: 768px) {
-  @supports (position: sticky) {
-    .bd-navbar {
-      position: sticky;
-      top: 0;
-      z-index: 1071;
-    }
-  }
-}
-
-/* Navbar link styles */
-.bd-navbar .navbar-nav .nav-link {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
-  color: #cdbfe3;
-}
-
-/* Navbar link hover and active styles */
-.bd-navbar .navbar-nav .nav-link.active,
-.bd-navbar .navbar-nav .nav-link:hover {
-  color: #fff;
-  background-color: transparent;
-}
-
-/* Navbar active link styles */
-.bd-navbar .navbar-nav .nav-link.active {
-  font-weight: 500;
-}
-
-/* Navbar SVG styles */
-.bd-navbar .navbar-nav-svg {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
-  vertical-align: text-top;
-}
-
-/* Dropdown menu styles */
-.bd-navbar .dropdown-menu {
-  font-size: 0.875rem;
-}
-
-/* Dropdown item active styles */
-.bd-navbar .dropdown-item.active {
-  font-weight: 500;
-  color: #212529;
-  background-color: transparent;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23292b2c' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: 0.4rem 0.8rem;
-  background-size: 0.75rem 0.75rem;
-}
-
-/* Dropdown item active hover styles */
-.bd-navbar .dropdown-item.active:hover {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23ffffff' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E");
-}
-
-/* Navbar item styles */
-.bd-navbar .nav-item {
-  position: relative;
-}
-
-/* Docs-specific styles */
-.bd-docs {
-  /* Styles for the absolute logo */
-  .navbar-absolute-logo {
-    padding-left: 0;
-  }
-
-  /* Styles for the navbar nav scroll */
-  .bd-navbar .navbar-nav-scroll {
-    overflow: visible;
-    margin-top: 0;
-  }
-
-  /* Styles for the navbar nav on smaller screens */
-  @media screen and (max-width: 991px) {
-    .navbar .navbar-nav .nav-item:not(:last-child) {
-      margin-bottom: 0;
-    }
-
-    .navbar .
+ * Copyright 2011-2
