--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_backgrounds.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_backgrounds.scss
@@ -1,30 +1,35 @@
-@each $color, $value in $colors {
+@function defineGradientVariants($prefix, $colorMap) {
+  @each $color, $value in $colorMap {
+    @include bg-gradient-variant("#{$prefix}-#{$color}", $value);
+  }
+}
+
+@function getSectionVariant($color) {
+  @return bg-variant(".section-#{$color}", map-get($section-colors, $color));
+}
+
+@function getFillOpacity($opacity) {
+  @return fill-opacity: $opacity;
+}
+
+@each $color, $value in $colors, $gradientValue in $theme-colors {
   @include bg-variant(".bg-#{$color}", $value);
+  @include bg-gradient-variant(".bg-gradient-#{$gradientValue}", $gradientValue);
 }
 
-@each $color, $value in $theme-colors {
-  @include bg-gradient-variant(".bg-gradient-#{$color}", $value);
-}
-
-@each $color, $value in $colors {
-  @include bg-gradient-variant(".bg-gradient-#{$color}", $value);
-}
-
-
-// Sections
+defineGradientVariants(".bg-gradient", $theme-colors);
 
 section {
-  //background-color: section-color("primary");
+  @include getSectionVariant("primary");
 }
 
 @each $color, $value in $section-colors {
-  @include bg-variant(".section-#{$color}", $value);
+  @include getSectionVariant($color);
 }
 
-@each $color, $value in $theme-colors {
-  @include bg-gradient-variant(".bg-gradient-#{$color}", $value);
+.fill-opacity-8 {
+  @include getFillOpacity(.8);
 }
-
 
 // Shape (svg) fill colors
 @each $color, $value in $theme-colors {
@@ -35,8 +40,4 @@ section {
   .stroke-#{$color} {
     stroke: $value;
   }
-}
-
-.fill-opacity-8 {
-  fill-opacity: .8;
 }
