--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/mixins/_gradients.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/mixins/_gradients.scss
@@ -1,8 +1,12 @@
 // Gradients
 
+$enable-gradients: true;
+
 @mixin gradient-bg($color) {
+  /// Generates a background gradient if $enable-gradients is true, otherwise sets a solid background color.
   @if $enable-gradients {
-    background: $color linear-gradient(180deg, mix($body-bg, $color, 15%), $color) repeat-x;
+    background: $color linear-gradient(180deg, mix($body-bg, $color, 15%), $color) no-repeat;
+    background-size: 100% 100%;
   } @else {
     background-color: $color;
   }
@@ -11,39 +15,27 @@
 // Horizontal gradient, from left to right
 //
 // Creates two color stops, start and end, by specifying a color and position for each color stop.
-@mixin gradient-x($start-color: $gray-700, $end-color: $gray-800, $start-percent: 0%, $end-percent: 100%) {
+@mixin gradient-x($start-color: $gray-700, $end-color: $gray-800, $start-percent: 0%, $end-percent: 100%, $repeat: no-repeat) {
+  /// Generates a horizontal linear gradient with two color stops.
   background-image: linear-gradient(to right, $start-color $start-percent, $end-color $end-percent);
-  background-repeat: repeat-x;
+  background-repeat: $repeat;
 }
 
 // Vertical gradient, from top to bottom
 //
 // Creates two color stops, start and end, by specifying a color and position for each color stop.
-@mixin gradient-y($start-color: $gray-700, $end-color: $gray-800, $start-percent: 0%, $end-percent: 100%) {
+@mixin gradient-y($start-color: $gray-700, $end-color: $gray-800, $start-percent: 0%, $end-percent: 100%, $repeat: no-repeat) {
+  /// Generates a vertical linear gradient with two color stops.
   background-image: linear-gradient(to bottom, $start-color $start-percent, $end-color $end-percent);
-  background-repeat: repeat-x;
+  background-repeat: $repeat;
 }
 
 @mixin gradient-directional($start-color: $gray-700, $end-color: $gray-800, $deg: 45deg) {
+  /// Generates a linear gradient with a specified angle and two color stops.
   background-image: linear-gradient($deg, $start-color, $end-color);
-  background-repeat: repeat-x;
+  background-repeat: no-repeat;
 }
 
 @mixin gradient-x-three-colors($start-color: $blue, $mid-color: $purple, $color-stop: 50%, $end-color: $red) {
-  background-image: linear-gradient(to right, $start-color, $mid-color $color-stop, $end-color);
-  background-repeat: no-repeat;
-}
-
-@mixin gradient-y-three-colors($start-color: $blue, $mid-color: $purple, $color-stop: 50%, $end-color: $red) {
-  background-image: linear-gradient($start-color, $mid-color $color-stop, $end-color);
-  background-repeat: no-repeat;
-}
-
-@mixin gradient-radial($inner-color: $gray-700, $outer-color: $gray-800) {
-  background-image: radial-gradient(circle, $inner-color, $outer-color);
-  background-repeat: no-repeat;
-}
-
-@mixin gradient-striped($color: rgba($white, .15), $angle: 45deg) {
-  background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
-}
+  /// Generates a horizontal linear gradient with three color stops.
+  background-image: linear-gradient(to right, $start
