--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_functions.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_functions.scss
@@ -1,12 +1,8 @@
-// Bootstrap functions
-//
-// Utility mixins and functions for evaluating source code across our variables, maps, and mixins.
-
-// Ascending
-// Used to evaluate Sass maps like our grid breakpoints.
-@mixin _assert-ascending($map, $map-name) {
+// Mixin to assert if a map is in ascending order
+@mixin assert-ascending($map, $map-name) {
   $prev-key: null;
   $prev-num: null;
+
   @each $key, $num in $map {
     @if $prev-num == null or unit($num) == "%" {
       // Do nothing
@@ -20,24 +16,17 @@
   }
 }
 
-// Starts at zero
-// Used to ensure the min-width of the lowest breakpoint starts at 0.
-@mixin _assert-starts-at-zero($map, $map-name: "$grid-breakpoints") {
+// Mixin to assert if a map starts at zero
+@mixin assert-starts-at-zero($map, $map-name: "$grid-breakpoints") {
   $values: map-values($map);
   $first-value: nth($values, 1);
+
   @if $first-value != 0 {
     @warn "First breakpoint in #{$map-name} must start at 0, but starts at #{$first-value}.";
   }
 }
 
-// Replace `$search` with `$replace` in `$string`
-// Used on our SVG icon backgrounds for custom forms.
-//
-// @author Hugo Giraudel
-// @param {String} $string - Initial string
-// @param {String} $search - Substring to replace
-// @param {String} $replace ('') - New value
-// @return {String} - Updated string
+// Function to replace a substring in a string
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
 
@@ -48,7 +37,7 @@
   @return $string;
 }
 
-// Color contrast
+// Function to calculate color contrast
 @function color-yiq($color, $dark: $yiq-text-dark, $light: $yiq-text-light) {
   $r: red($color);
   $g: green($color);
@@ -63,7 +52,7 @@
   }
 }
 
-// Retrieve color Sass maps
+// Function to retrieve color Sass maps
 @function color($key: "blue") {
   @return map-get($colors, $key);
 }
@@ -76,7 +65,7 @@
   @return map-get($grays, $key);
 }
 
-// Request a theme color level
+// Function to request a theme color level
 @function theme-color-level($color-name: "primary", $level: 0) {
   $color: theme-color($color-name);
   $color-base: if($level > 0, $black, $white);
