--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_screenreaders.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_screenreaders.scss
@@ -1,6 +1,27 @@
-//
 // Screenreaders
-//
+
+@mixin sr-only() {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
+
+@mixin sr-only-focusable() {
+  @include sr-only();
+  border: 0;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
 
 .sr-only {
   @include sr-only();
