--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_shadows.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_shadows.scss
@@ -1,17 +1,17 @@
-// stylelint-disable declaration-no-important
+@stylelint-disable declaration-no-important {
+  .shadow-sm {
+    box-shadow: $box-shadow-sm;
+  }
 
-.shadow-sm {
-  box-shadow: $box-shadow-sm !important;
-}
+  .shadow {
+    box-shadow: $box-shadow;
+  }
 
-.shadow {
-  box-shadow: $box-shadow !important;
-}
+  .shadow-lg {
+    box-shadow: $box-shadow-lg;
+  }
 
-.shadow-lg {
-  box-shadow: $box-shadow-lg !important;
-}
-
-.shadow-none {
-  box-shadow: none !important;
+  .shadow-none {
+    box-shadow: none;
+  }
 }
