--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_forms.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_forms.scss
@@ -1,17 +1,22 @@
+// Variables
+$input-border-color: lighten($black, 5%);
+$input-border-radius: $border-radius-lg;
+$input-font-size: $font-size-sm;
+$input-transition: transition-input-focus-color();
+
 /* Form controls */
 @include form-control-placeholder(#6c757c, 1);
 
 .form-control {
-  border-color: lighten($black, 5%);
-  border-radius: $border-radius-lg;
-  font-size: $font-size-sm;
-  @include transition-input-focus-color();
-
+  border: 1px solid $input-border-color;
+  border-radius: $input-border-radius;
+  font-size: $input-font-size;
+  @include $input-transition;
 
   &:focus {
     border-color: $primary;
     background-color: $input-bg;
-    @include box-shadow(none);
+    box-shadow: none;
 
     & + .input-group-append .input-group-text,
     & ~ .input-group-append .input-group-text,
@@ -27,7 +32,7 @@
   .has-error &,
   .has-success &:focus,
   .has-error &:focus {
-    @include box-shadow(none);
+    box-shadow: none;
   }
 
   .has-danger &,
@@ -39,16 +44,17 @@
   }
 
   & + .form-control-feedback {
-    border-radius: $border-radius-lg;
+    border-radius: $input-border-radius;
     margin-top: -7px;
     position: absolute;
     right: 10px;
     top: 50%;
+    transform: translateY(-50%);
     vertical-align: middle;
   }
 
   .open & {
-    border-radius: $border-radius-lg $border-radius-lg 0 0;
+    border-radius: $input-border-radius $input-border-radius 0 0;
     border-bottom-color: $transparent-bg;
   }
 
@@ -56,13 +62,12 @@
   & + .input-group-prepend .input-group-text {
     background-color: $white;
   }
-
 }
 
 .has-success .input-group-append .input-group-text,
 .has-success .input-group-prepend .input-group-text,
 .has-success .form-control {
-  border-color: lighten($black, 5%);
+  border-color: $input-border-color;
 }
 
 .has-success .form-control:focus,
@@ -111,7 +116,6 @@
     }
   }
 
-
   &.form-check:after {
     display: none !important;
   }
@@ -129,24 +133,4 @@
 
   &.form-check .form-check-label {
     color: $danger-states;
-  }
 
-  &.input-group-focus {
-    .input-group-text {
-      border-color: #ec250d !important;
-    }
-  }
-}
-
-
-@include media-breakpoint-down(xs) {
-  .form-horizontal .col-form-label,
-  .form-horizontal .label-on-right {
-    text-align: inherit;
-    padding-top: 0;
-
-    code {
-      padding: 0 10px;
-    }
-  }
-}
