--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_navbar.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_navbar.scss
@@ -1,8 +1,27 @@
+// Variables
+$navbar-bg-colors: (
+  'white': #fff,
+  'dark': #333,
+  'primary': $primary,
+  'warning': $warning,
+  'info': $info,
+  'success': darken($success, 10%),
+  'danger': $danger
+);
+
+// Navbar
 .navbar {
   width: 100%;
   z-index: 1050;
-  background: $navbar-color;
+  background: map-get($navbar-bg-colors, white);
 
+  // Navbar wrapper
+  .navbar-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  // Photo
   .photo {
     display: inline-block;
     height: 30px;
@@ -16,90 +35,70 @@
     }
   }
 
-  .navbar-wrapper {
-    display: flex;
-    align-items: center;
-  }
-
+  // Navbar text
   .navbar-text {
     color: $white;
   }
 
+  // Buttons
   .btn {
     margin: 0 5px 0 10px;
   }
 
+  // Navbar modifiers
   &.navbar-absolute {
     position: absolute;
     z-index: 1050;
   }
 
-
   &.navbar-transparent {
     background: transparent !important;
   }
 
-  &.bg-white {
-    .navbar-nav {
-      .search-bar.input-group {
-        i {
-          color: $black;
+  // Navbar background color modifiers
+  @each $name, $color in $navbar-bg-colors {
+    &.bg-#{$name} {
+      background: $color !important;
+
+      // Navbar nav
+      .navbar-nav {
+        .search-bar.input-group {
+          i {
+            color: $black;
+          }
+        }
+
+        .search-bar.input-group .form-control {
+          background: rgba($black, 0.1);
+          border-radius: 4px;
+        }
+
+        a.nav-link {
+          color: $black !important;
+
+          p {
+            color: $black;
+          }
         }
       }
 
-      .search-bar.input-group .form-control {
-        background: rgba($black, 0.1);
-        border-radius: 4px;
+      // Navbar text and brand
+      .navbar-text, .navbar-brand {
+        color: $black;
       }
 
-      a.nav-link {
+      // Form control
+      .form-control {
         color: $black !important;
-
-        p {
-          color: $black;
-        }
       }
 
+      .form-control::placeholder {
+        color: $dark-gray !important;
+      }
     }
-
-    .navbar-text, .navbar-brand {
-      color: $black;
-    }
-
-    .form-control {
-      color: $black !important;
-    }
-
-    .form-control::placeholder {
-      color: $dark-gray !important;
-    }
-
   }
 
-  &.bg-dark {
-    background: $black !important;
-  }
-
-  &.bg-primary {
-    background-color: $primary !important;
-  }
-
-  &.bg-warning {
-    background-color: $warning !important;
-  }
-
-  &.bg-info {
-    background-color: $info !important;
-  }
-
-  &.bg-success {
-    background-color: darken($success, 10%) !important;
-  }
-
-  &.bg-danger {
-    background-color: $danger !important;
-  }
-
+  // Navbar brand
   .navbar-brand {
     position: relative;
     padding-top: .3125rem;
@@ -110,12 +109,13 @@
     font-size: $font-paragraph;
   }
 
+  // Navbar toggle
   .navbar-toggle button:focus, .navbar-toggler {
     outline: none;
   }
-
 }
 
+// Navbar minimize fixed
 .navbar-minimize-fixed {
   position: fixed;
   margin-left: 40px;
@@ -133,6 +133,7 @@
   }
 }
 
+// Notification
 .notification {
   background: $danger;
   color: $white;
@@ -148,6 +149,7 @@
   border: 1px solid $danger;
 }
 
+// Navbar nav
 .navbar-nav li {
   padding: 0 10px;
 
@@ -161,17 +163,19 @@
   }
 }
 
+// Media queries
 @include media-breakpoint-down(md) {
+  // Navbar
   .navbar {
     top: -70px;
-  }
 
-  .navbar {
+    // Container fluid
     .container-fluid {
       padding-right: 15px;
       padding-left: 15px;
     }
 
+    // Navbar collapse
     .navbar-collapse {
       .input-group {
         margin: 0;
@@ -179,8 +183,8 @@
       }
     }
 
+    // Navbar nav
     .navbar-nav {
-
       .btn {
         margin-left: -3px;
         display: flex;
@@ -227,288 +231,4 @@
 
         .nav-link {
           padding-bottom: 0;
-        }
 
-        .dropdown-menu {
-          .dropdown-item {
-            margin-top: 0;
-            padding-left: 24px;
-          }
-        }
-      }
-    }
-
-    .dropdown.show .dropdown-menu {
-      display: block;
-
-    }
-
-    .dropdown .dropdown-menu {
-      display: none;
-
-      li a {
-        color: $black;
-      }
-    }
-
-    .dropdown.show .dropdown-menu,
-    .dropdown .dropdown-menu {
-      background-color: transparent;
-      border: 0;
-      transition: none;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      width: auto;
-      margin: 0px 1rem;
-      padding-top: 0;
-      margin-top: 0px;
-
-      &:before {
-        display: none;
-      }
-    }
-
-    .dropdown-menu .dropdown-item:focus,
-    .dropdown-menu .dropdown-item:hover {
-      color: $white;
-    }
-
-    &.bg-white .dropdown-menu .dropdown-item:focus,
-    &.bg-white .dropdown-menu .dropdown-item:hover {
-      color: $default;
-    }
-
-    .navbar-toggler-bar {
-      display: block;
-      position: relative;
-      width: 22px;
-      height: 1px;
-      border-radius: 1px;
-      background: $white;
-
-      &.navbar-kebab {
-        height: 4px;
-        width: 4px;
-        margin-bottom: 3px;
-        border-radius: 50%;
-      }
-
-      & + .navbar-toggler-bar {
-        margin-top: 7px;
-      }
-
-      & + .navbar-toggler-bar.navbar-kebab {
-        margin-top: 0px;
-      }
-
-      &.bar2 {
-        width: 17px;
-        transition: width .2s linear;
-      }
-    }
-
-    &.bg-white:not(.navbar-transparent) .navbar-toggler-bar {
-      background-color: $default;
-    }
-
-    & .toggled .navbar-toggler-bar {
-      width: 24px;
-    }
-  }
-
-  .bar1,
-  .bar2,
-  .bar3 {
-    outline: 1px solid transparent;
-  }
-  .bar1 {
-    top: 0px;
-    @include bar-animation($topbar-back);
-  }
-  .bar2 {
-    opacity: 1;
-  }
-  .bar3 {
-    bottom: 0px;
-    @include bar-animation($bottombar-back);
-  }
-  .toggled .bar1 {
-    top: 6px;
-    @include bar-animation($topbar-x);
-  }
-  .toggled .bar2 {
-    opacity: 0;
-  }
-  .toggled .bar3 {
-    bottom: 9px;
-    @include bar-animation($bottombar-x);
-  }
-
-  @include topbar-x-rotation();
-  @include topbar-back-rotation();
-  @include bottombar-x-rotation();
-  @include bottombar-back-rotation();
-
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @-moz-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-
-  .navbar-nav {
-    .nav-link {
-      i.fa,
-      i.tim-icons {
-        opacity: .5;
-      }
-    }
-  }
-
-}
-
-@include media-breakpoint-up(lg) {
-  .navbar-collapse {
-    background: none !important;
-  }
-
-  .navbar .navbar-toggle {
-    display: none;
-
-  }
-
-  .navbar-nav {
-    .nav-link {
-      &.profile-photo {
-        padding: 0;
-        margin: 7px $padding-base-horizontal;
-      }
-    }
-  }
-
-  .navbar {
-    .caret {
-      position: absolute;
-      left: 80%;
-      top: 55%;
-      margin-left: 0;
-    }
-  }
-
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: $list-inline-padding;
-    padding-left: $list-inline-padding;
-  }
-
-}
-
-@include media-breakpoint-down(xs) {
-  .navbar[class*='navbar-toggleable-'] .container {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-}
-
-@include media-breakpoint-between(md, lg) {
-  .bar1,
-  .bar2,
-  .bar3 {
-    outline: 1px solid transparent;
-  }
-  .bar1 {
-    top: 0px;
-    @include bar-animation($topbar-back);
-  }
-  .bar2 {
-    opacity: 1;
-  }
-  .bar3 {
-    bottom: 0px;
-    @include bar-animation($bottombar-back);
-  }
-  .toggled .bar1 {
-    top: 7px;
-    @include bar-animation($topbar-x);
-  }
-  .toggled .bar2 {
-    opacity: 0;
-  }
-  .toggled .bar3 {
-    bottom: 9px;
-    @include bar-animation($bottombar-x);
-  }
-
-  @include topbar-x-rotation();
-  @include topbar-back-rotation();
-  @include bottombar-x-rotation();
-  @include bottombar-back-rotation();
-
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @-moz-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-
-  .navbar .navbar-toggler-bar.bar2 {
-    width: 17px;
-    transition: width .2s linear;
-  }
-
-  .navbar .navbar-toggler-bar {
-    display: block;
-    position: relative !important;
-    width: 22px;
-    height: 1px;
-    border-radius: 1px;
-    background: $white;
-  }
-  .navbar .navbar-toggler-bar + .navbar-toggler-bar {
-    margin-top: 7px;
-  }
-
-  .navbar .navbar-toggle .navbar-toggler {
-    display: block;
-  }
-
-  .navbar-minimize-fixed {
-    display: none;
-  }
-}
