--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_float.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_float.scss
@@ -1,17 +1,15 @@
 // stylelint-disable declaration-no-important
 
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+@each $breakpoint, $value in $grid-breakpoints {
+  $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-    .float#{$infix}-left {
-      float: left !important;
-    }
-    .float#{$infix}-right {
-      float: right !important;
-    }
-    .float#{$infix}-none {
-      float: none !important;
-    }
+  .float-left#{$infix} {
+    float: left !important;
+  }
+  .float-right#{$infix} {
+    float: right !important;
+  }
+  .float-none#{$infix} {
+    float: none !important;
   }
 }
