--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_position.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_position.scss
@@ -1,34 +1,36 @@
-// stylelint-disable declaration-no-important
-
-// Common values
-@each $position in $positions {
-  .position-#{$position} {
-    position: $position !important;
-  }
+// Utility classes for common positions
+@mixin position($position) {
+  position: $position !important;
 }
 
-// Shorthand
+.position-static {
+  @include position(static);
+}
 
-.fixed-top {
-  position: fixed;
+.position-relative {
+  @include position(relative);
+}
+
+.position-absolute {
+  @include position(absolute);
+}
+
+.position-fixed {
+  position: fixed !important;
   top: 0;
-  right: 0;
-  left: 0;
-  z-index: $zindex-fixed;
-}
-
-.fixed-bottom {
-  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: $zindex-fixed;
 }
 
-.sticky-top {
-  @supports (position: sticky) {
-    position: sticky;
-    top: 0;
+.position-sticky {
+  position: sticky;
+  top: 0;
+  z-index: $zindex-sticky;
+  @supports not (position: sticky) {
+    @include position(relative);
     z-index: $zindex-sticky;
   }
 }
+
